--- a/src/components/Roulette2.0/Roulette2.module.css
+++ b/src/components/Roulette2.0/Roulette2.module.css
@@ -3,15 +3,34 @@
 
 .roulette{
     --color1: red;
-    height: 350px;
-    width:  600px;
+    height: 400px;
+    width:  650px;
     border: 1px solid black;
     background-color: red;
     position: relative;
+    margin-top: 20px;
+    padding: 5px;
 }
+
+.winningText{
+    margin: 0;
+    width: 600px;
+    height: 20px;
+    position: absolute;
+    text-align: center;
+    top: 60px;
+    left: 25px;
+}
+
+h5{
+    margin: 0;
+    display: inline;
+}
+
 .wheel {
     position: absolute;
-    bottom: 0;
+    bottom: 5px;
+    left: 25px;
     display: flex;
     border: 1px solid black;
     height: 300px;
@@ -22,7 +41,7 @@
 }
 
 .slide {
-    transition: transform ease-in 2s;
+    transition: transform ease-in-out 6s;
     width: 100px;
     height: 300px;
 
@@ -35,4 +54,32 @@
     border: 1px solid black;  
     color: var(--color1)
 
+}
+
+button {
+  background-color: #fbeee0;
+  border: 2px solid #422800;
+  border-radius: 30px;
+  box-shadow: #422800 4px 4px 0 0;
+  color: #422800;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 0 18px;
+  line-height: 50px;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+button:hover {
+  background-color: #fff;
+}
+
+button:active {
+  box-shadow: #422800 2px 2px 0 0;
+  transform: translate(2px, 2px);
 }
